--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "author": "",
-  "name": "bem-project-stub",
-  "version": "0.0.1",
+  "author": "Varvara Stepanova",
+  "name": "bem-highlight",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bem/project-stub.git"
+    "url": "git://github.com/varya/bem-highlight.js"
   },
   "engines": {
     "node": "0.6 | 0.8 | 0.10"
