--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "node": "0.6 | 0.8 | 0.10"
   },
   "dependencies": {
-    "bem" : "0.6.16",
-    "bem-environ" : "1.3.1"
+    "bem-environ": "~1.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "bem": "~0.5.20"
+  },
   "private": true
 }
