--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "npm": ">= 1.2.32"
   },
   "dependencies": {
-    "bem-environ": "^1.4.0"
+    "bem-environ": "^1.4.0",
+    "less": "^1.7.0"
   },
   "devDependencies": {
-    "less": "^1.7.0",
     "bem": "^0.7.8"
   },
   "peerDependencies": {
