--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Varvara Stepanova",
+  "author": "Varya Stepanova",
   "name": "bem-highlight.js",
   "version": "1.0.0",
   "repository": {
@@ -11,17 +11,10 @@
     "npm": ">= 1.2.32"
   },
   "dependencies": {
-    "bem-environ": "^1.4.0",
-    "less": "^1.7.0"
+    "bem-environ": "^1.4.0"
   },
   "devDependencies": {
-    "bem": "^0.7.8"
-  },
-  "peerDependencies": {
-    "bower": "*"
-  },
-  "scripts": {
-    "postinstall": "bower install"
+    "bem": "~0.5.20"
   },
   "private": true
 }
