--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "npm": ">= 1.2.32"
   },
   "dependencies": {
-    "bem-environ": "^1.4.0",
+    "bower-npm-install": "~0.5.1",
+    "enb": "~0.13.2",
+    "enb-xjst": "~1.1.1",
+    "enb-bemxjst": "~1.2.0",
+    "enb-borschik": "1.0.4",
+    "enb-modules": "~0.1.2",
+    "enb-diverse-js": ">=0.1.0",
     "borschik": "^1.0.5"
   },
   "devDependencies": {
     "bem": "~0.5.20"
   },
   "scripts": {
+    "install": "./node_modules/bower-npm-install/bin/bower-npm-install",
     "postinstall": "./node_modules/borschik/bin/borschik -i blocks/highlight/highlight.src.js -m no -o blocks/highlight/highlight.js"
   },
   "private": true
