--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "borschik": "^1.0.5"
   },
   "devDependencies": {
-    "bem": "~0.5.20"
+    "bem": "~0.5.20",
+    "gulp": "^3.8.10"
   },
   "scripts": {
     "install": "./node_modules/bower-npm-install/bin/bower-npm-install",
