Copy themes and prefix them with BEM selectors

--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "borschik": "^1.0.5"
   },
   "devDependencies": {
+    "amdefine": "^0.1.0",
     "bem": "~0.5.20",
+    "event-stream": "^3.2.1",
     "gulp": "^3.8.10",
-    "gulp-run": "^1.6.5"
+    "gulp-rename": "^1.2.0",
+    "gulp-run": "^1.6.5",
+    "postcss": "^4.0.0"
   },
   "scripts": {
     "install": "./node_modules/bower-npm-install/bin/bower-npm-install",
